Added get contact method

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="appBackground">#222222</color>
     <color name="colorProgressBackgroud">#444444</color>
     <color name="colorProgressBar">#555555</color>
+    <color name="serviceTitlebg">#9a555555</color>
     <color name="colorgreyBg">#f41b2730</color>
     <color name="colorgreyBg2">#c70d1318</color>
     <color name="colorgreyBgtrans">#7c1b2730</color>
