--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -5,7 +5,7 @@
               android:id="@+id/lnrServiceContainer"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@android:color/transparent"
+              android:background="@color/serviceTitlebg"
               android:onClick="onViewClickedEvent"
               android:orientation="horizontal">
 
@@ -44,10 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/imgArrowContainer"
             android:orientation="vertical"
-            android:paddingBottom="12dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="8dp"
-            android:paddingTop="14dp">
+            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -81,57 +78,6 @@
 
             </RelativeLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/txtModelYear"
-                    style="@style/mediumLabel"
-                    android:layout_width="match_parent"
-                    android:layout_marginBottom="0dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_marginTop="4dp"
-                    android:text="Model year"
-                    android:textColor="@color/textBlack"/>
-
-                <TextView
-                    android:id="@+id/txtMilageTxt"
-                    style="@style/mediumLabel"
-                    android:layout_width="match_parent"
-                    android:layout_marginBottom="0dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_marginTop="4dp"
-                    android:text="0,0 km"
-                    android:textColor="@color/textBlack"/>
-
-                <TextView
-                    android:id="@+id/txtColor"
-                    style="@style/mediumLabel"
-                    android:layout_width="match_parent"
-                    android:layout_marginBottom="0dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_marginTop="4dp"
-                    android:text="Color"
-                    android:textColor="@color/textBlack"/>
-
-                <ImageView
-                    android:id="@+id/imgPicture"
-                    android:layout_width="match_parent"
-                    android:layout_height="130dp"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="10dp"
-                    android:background="#999999"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/car_icon_dark"/>
-
-            </LinearLayout>
-
         </LinearLayout>
 
         <TextView
@@ -142,6 +88,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="4dp"
+            android:paddingBottom="10dp"
             android:text="Service description service description service description  service description  service description service description..."
             android:textColor="#cccccc"/>
 
