--- a/app/src/main/res/layout/splash_content.xml
+++ b/app/src/main/res/layout/splash_content.xml
@@ -8,30 +8,31 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:layout_gravity="center_horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="60dp"
             android:layout_weight="1"
             android:text="Welcome"
-            android:typeface="monospace"
+            android:textAlignment="center"
             android:textColor="@color/textWhite"
             android:textSize="30dp"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="60dp"/>
+            android:typeface="monospace"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            app:srcCompat="@drawable/logo"
-            android:layout_gravity="center_horizontal"/>
+            app:srcCompat="@drawable/logo"/>
 
 
         <ProgressBar
