--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -54,6 +54,7 @@
 
                 <GridView
                     android:id="@+id/grdHomeTiles"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:columnWidth="130dp"
