--- a/app/src/main/res/menu/login_side_menu.xml
+++ b/app/src/main/res/menu/login_side_menu.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/action_register"
             android:icon="@drawable/register_icon"
-            android:title="Register new user"/>
+            android:title="Register new userName"/>
 
         <item
             android:id="@+id/action_switch_users"
