--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -291,84 +291,109 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginBottom="30dp"
                         android:layout_marginTop="40dp"
                         android:gravity="center_horizontal"
                         android:orientation="horizontal">
 
-                        <FrameLayout
-                            style="@style/profileBarContainer"
-                            android:layout_marginRight="30dp">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="30dp"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <FrameLayout style="@style/profileBarContainer">
 
 
-                            <ProgressBar
-                                style="?android:attr/progressBarStyleHorizontal"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:max="100"
-                                android:progress="100"
-                                android:progressDrawable="@drawable/circular_progressbar_track"/>
+                                <ProgressBar
+                                    style="?android:attr/progressBarStyleHorizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:max="100"
+                                    android:progress="100"
+                                    android:progressDrawable="@drawable/circular_progressbar_track"/>
 
-                            <ProgressBar
-                                android:id="@+id/progressBar1"
-                                style="?android:attr/progressBarStyleHorizontal"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:max="100"
-                                android:progress="0"
-                                android:progressDrawable="@drawable/circular_progressbar_progress"/>
+                                <ProgressBar
+                                    android:id="@+id/progressBar1"
+                                    style="?android:attr/progressBarStyleHorizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:max="100"
+                                    android:progress="0"
+                                    android:progressDrawable="@drawable/circular_progressbar_progress"/>
 
-                            <LinearLayout style="@style/profileBarSubContainer">
+                                <LinearLayout style="@style/profileBarSubContainer">
 
-                                <TextView
-                                    android:id="@+id/txtBarInfo1"
-                                    style="@style/profileBarInfo1"
-                                    android:text="0,000"/>
+                                    <TextView
+                                        android:id="@+id/txtBarInfo1"
+                                        style="@style/profileBarInfo1"
+                                        android:text="0,000"/>
 
-                                <TextView
-                                    android:id="@+id/txtBarInfo2"
-                                    style="@style/profileBarInfo2"
-                                    android:text="0,00"/>
+                                    <TextView
+                                        android:id="@+id/txtBarInfo2"
+                                        style="@style/profileBarInfo2"
+                                        android:text="0,00"/>
 
-                            </LinearLayout>
+                                </LinearLayout>
 
-                        </FrameLayout>
+                            </FrameLayout>
 
-                        <FrameLayout style="@style/profileBarContainer">
+                            <TextView
+                                style="@style/mediumLabel"
+                                android:text="@string/points"
+                                android:textAlignment="center"/>
 
-                            <ProgressBar
-                                style="?android:attr/progressBarStyleHorizontal"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:max="100"
-                                android:progress="100"
-                                android:progressDrawable="@drawable/circular_progressbar_track"/>
+                        </LinearLayout>
 
-                            <ProgressBar
-                                android:id="@+id/progressBar2"
-                                style="?android:attr/progressBarStyleHorizontal"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:max="100"
-                                android:progress="0"
-                                android:progressDrawable="@drawable/circular_progressbar_progress"/>
 
-                            <LinearLayout style="@style/profileBarSubContainer">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
 
-                                <TextView
-                                    android:id="@+id/txtBarInfo1b"
-                                    style="@style/profileBarInfo1"
-                                    android:text="0,000"/>
+                            <FrameLayout style="@style/profileBarContainer">
 
-                                <TextView
-                                    android:id="@+id/txtBarInfo2b"
-                                    style="@style/profileBarInfo2"
-                                    android:text="0,00"/>
+                                <ProgressBar
+                                    style="?android:attr/progressBarStyleHorizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:max="100"
+                                    android:progress="100"
+                                    android:progressDrawable="@drawable/circular_progressbar_track"/>
 
-                            </LinearLayout>
+                                <ProgressBar
+                                    android:id="@+id/progressBar2"
+                                    style="?android:attr/progressBarStyleHorizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:max="100"
+                                    android:progress="0"
+                                    android:progressDrawable="@drawable/circular_progressbar_progress"/>
 
-                        </FrameLayout>
+                                <LinearLayout style="@style/profileBarSubContainer">
 
+                                    <TextView
+                                        android:id="@+id/txtBarInfo1b"
+                                        style="@style/profileBarInfo1"
+                                        android:text="0,000"/>
+
+                                    <TextView
+                                        android:id="@+id/txtBarInfo2b"
+                                        style="@style/profileBarInfo2"
+                                        android:text="0,00"/>
+
+                                </LinearLayout>
+
+                            </FrameLayout>
+
+                            <TextView
+                                style="@style/mediumLabel"
+                                android:text="@string/referral"
+                                android:textAlignment="center"/>
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
