Added out of focus check

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -65,11 +65,36 @@
                     android:text="@string/password"
                     android:textColor="#cccccc"/>
 
-                <EditText
-                    android:id="@+id/txtPassword"
-                    style="@style/mediumTextBox"
-                    android:hint="@string/password"
-                    android:inputType="textWebPassword"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:padding="0dp">
+
+                    <EditText
+                        android:id="@+id/txtPassword"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentRight="true"
+                        android:paddingRight="55dp"
+                        style="@style/mediumTextBox"
+                        android:layout_margin="0dp"
+                        android:layout_weight="1"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"/>
+
+                    <ImageButton
+                        android:id="@+id/imgBtnPasswordViewtoggle"
+                        android:layout_width="45dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="5dp"
+                        android:background="@android:color/transparent"
+                        android:onClick="onViewClickedEvent"
+                        app:srcCompat="@drawable/passhidden_view_mode"/>
+
+                </RelativeLayout>
 
                 <Button
                     android:id="@+id/btnLogin"
@@ -160,7 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:text="Select a linked userName"
+                android:text="Select a linked user"
                 android:textAlignment="center"/>
 
             <ListView
