--- a/app/src/main/res/menu/login_menu.xml
+++ b/app/src/main/res/menu/login_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
-        android:id="@+id/action_exit"
-        android:icon="@drawable/close_icon"
-        android:title="Close/Exit"
-        android:visible="false"
+        android:id="@+id/action_help"
+        android:icon="@drawable/help_icon"
+        android:title="@string/help"
         app:showAsAction="never"/>
 
 </menu>
