--- a/app/src/main/res/menu/registration_menu.xml
+++ b/app/src/main/res/menu/registration_menu.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_loginExisting"
+        android:icon="@drawable/signin_icon"
+        android:title="Sign in with existing user"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_help"
         android:icon="@drawable/help_icon"
         android:title="@string/help"
