--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -26,6 +26,7 @@
 
         <ImageView
             android:id="@+id/imageView3"
+            android:background="@color/colorTransparent"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_gravity="right"
