Fixed alert dialog

--- a/app/src/main/res/layout/activity_referral.xml
+++ b/app/src/main/res/layout/activity_referral.xml
@@ -41,6 +41,7 @@
 
                 <EditText
                     android:id="@+id/txtContactNumber"
+                    android:inputType="phone"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_toLeftOf="@+id/frmGetContact"
