--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_fullscreen"
         android:icon="@drawable/fullscreen_icon"
+        android:visible="false"
         android:orderInCategory="100"
         android:title="@string/edit"
         app:showAsAction="always"/>
