--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -180,7 +180,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txtLinkedUserTitle"
                 style="@style/largeLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
