--- a/app/src/main/res/layout/splash_content.xml
+++ b/app/src/main/res/layout/splash_content.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical">
+             android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:visibility="gone"
             app:srcCompat="@drawable/logo"/>
-
 
         <ProgressBar
             android:id="@+id/prbSplashProgress"
