--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -15,7 +15,6 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -30,50 +29,146 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingBottom="50dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="10dp">
 
             <TextView
-                android:id="@+id/textView3"
                 style="@style/mediumLabel"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="30dp"
-                android:text="Welcome and thank you for downloading the Geartronix app, to proceed please select an option below"
-                />
+                android:text="Welcome and thank you for downloading the Geartronix app, to proceed please select an option below"/>
 
-            <Button
-                android:id="@+id/btnCreateAccount"
-                style="@style/mediumButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:onClick="onViewClickedEvent"
-                android:text="Create a new account"/>
 
-            <TextView
-                style="@style/mediumLabel"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="13dp"
-                android:layout_marginTop="13dp"
-                android:text="OR"
-                android:textAlignment="center"/>
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btnLoginExistingUser"
-                style="@style/mediumButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:onClick="onViewClickedEvent"
-                android:text="Sign in with existing user"/>
+                <LinearLayout
+                    android:id="@+id/btnCreateAccount"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/colorgreyBg"
+                    android:onClick="onViewClickedEvent"
+                    android:orientation="vertical"
+                    android:paddingBottom="11dp"
+                    android:paddingEnd="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingStart="8dp"
+                    android:paddingTop="7dp">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/imgHomeTile"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:layout_gravity="center"
+                            app:srcCompat="@drawable/register_icon"/>
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:layout_gravity="right"
+                            android:layout_marginEnd="-11dp"
+                            android:layout_marginRight="-11dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/colorTransparent"
+                            android:scaleType="fitEnd"
+                            app:srcCompat="@mipmap/more_icon"/>
+
+                    </FrameLayout>
+
+                    <TextView
+                        android:id="@+id/txtHomeTile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/imgHomeTile"
+                        android:text="Create account"
+                        android:textAlignment="center"
+                        android:textColor="@color/textWhite"/>
+
+                </LinearLayout>
+
+                <TextView
+                    style="@style/mediumLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="13dp"
+                    android:layout_marginTop="13dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="OR"
+                    android:textAlignment="center"/>
+
+                <LinearLayout
+                    android:id="@+id/btnLoginExistingUser"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/colorgreyBg"
+                    android:onClick="onViewClickedEvent"
+                    android:orientation="vertical"
+                    android:paddingBottom="11dp"
+                    android:paddingEnd="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingStart="8dp"
+                    android:paddingTop="7dp">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/imgHomeTile2"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:layout_gravity="center"
+                            app:srcCompat="@drawable/signin_icon"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:layout_gravity="right"
+                            android:layout_marginEnd="-11dp"
+                            android:layout_marginRight="-11dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/colorTransparent"
+                            android:scaleType="fitEnd"
+                            app:srcCompat="@mipmap/more_icon"/>
+
+                    </FrameLayout>
+
+                    <TextView
+                        android:id="@+id/txtHomeTile2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/imgHomeTile"
+                        android:text="Sign in"
+                        android:textAlignment="center"
+                        android:textColor="@color/textWhite"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
         </LinearLayout>
-
 
     </LinearLayout>
 
