--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -172,4 +172,10 @@
 
     </LinearLayout>
 
+    <VideoView
+        android:id="@+id/vdoVoda"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 </FrameLayout>
